# generalized-integrate-and-fire-model

./: CMakeLists.txt  linear_response.cpp  linear_response.h  main.cpp  neuron_models.cpp  neuron_models.h
